--- a/02_css선택자2.html
+++ b/02_css선택자2.html
@@ -43,7 +43,31 @@
         #test1 ul {
             background: yellow;
         }
-        /* 형제 관계 선택자 (동위 선택자) */
+        /* 형제 관계 선택자 (동위 선택자) 나중에 배울 것 */
+        /* css에서 제공하는 이벤트 관련 선택자 */ /* 클릭 했을 때 변경*/
+        #active-test:active{
+            background: red;
+            color: white;
+        }
+        #hover-test:hover{              /* 마우스 댔을 때 변경*/
+            cursor: pointer;    /* 손가락 표시 */
+            background: darkgreen;
+            color: aqua;
+            font: 60px bold;
+        }
+        input[type=checkbox]:checked{ /* []는 속성으로 접근한다. */
+            width: 100px;
+            height: 100px;
+        }
+        #userId:focus, #userPassword:focus{ /* 입력칸 누르면 표시 */
+            background: hotpink;
+        }
+        option:enabled{
+            background: aqua;
+        }
+        option:disabled{
+            background: red;
+        }
 
     </style>
 </head>
@@ -76,5 +100,55 @@
                 <li> ul태그의 자손이면서, div 태그의 후손 </li> <!-- 후손 -->
             </ul>
         </div>  <!-- 자식 -->
+    <!-- 4교시 -->
+    <hr>
+    <h2> 반응 선택자 </h2>
+    <p> 사용자의 행동에 따라 달라지는 선택자 </p>
+    <pre>
+        사용자가 클릭한 태그         - 선택자:active{설정내용}
+        사용자의 마우스가 올라온 태그 - 선택자:hover{설정내용}
+    </pre>
+    <div id="active-test"> active 테스트 </div>
+    <div id="hover-test"> hover 테스트 </div>
+    
+    <hr>
+    <h2> 상태 선택자 </h2>
+    <p> 입력 양식의 상태에 따라서 선택되는 선택자 </p>
+    <!--input[type="checkbox" name="fruits" value="사과"]#apple+label[for="apple"]{사과}-->
+    <input type="checkbox" name="fruits" value="사과" id="apple">
+    <label for="apple">사과</label>
+    <input type="checkbox" name="fruits" value="바나나" id="banana">
+    <label for="apple">바나나</label>
+    <input type="checkbox" name="fruits" value="포도" id="grape">
+    <label for="apple">포도</label>
+
+    <hr>
+    <label for="userId"> 아이디 : </label>
+    <input type="text" id="userId" placeholder="아이디 입력">
+    <br>
+    <label for="userPassword"> 비밀번호 : </label>
+    <input type="password" id="userPassword" placeholder="비밀번호 입력">
+
+    <hr> <!-- 많이 쓸만한 것들 -->
+    <p> 사용 가능한 input 태그 선택 </p>
+    <pre>
+        태그:enabled{설정내용}
+        태그:disabled{설정내용}
+    </pre>
+    <h3> 주문 물품 선택 </h3>
+    <!--select>option[value]*6-->
+    <select>
+        <option value="붕어빵" disabled>붕어빵</option> <!--목록엔 있지만 선택 불가-->
+        <option value="피자빵">피자빵</option>
+        <option value="모카빵">모카빵</option>
+        <option value="소금빵">소금빵</option>
+        <option value="소보로">소보로</option>
+        <option value="모닝빵" disabled>모닝빵</option>
+    </select>
+
+    <input type="text" disabled>
+    <button disabled> 눌리지 않는 버튼 </button>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
